Update test cases